--- a/src/App.scss
+++ b/src/App.scss
@@ -6,6 +6,7 @@
   align-items: flex-end;
   justify-content: flex-start;
   font-size: calc(10px + 1.6vmin);
+  color: var(--text-color);
 }
 
 .App-icon {
@@ -28,19 +29,20 @@
   padding: 1rem;
   height: fit-content;
   text-decoration: none;
+  color: var(--text-color);
   cursor: pointer;
 
   &::after {
     content: '';
     display: block;
-    background: #000;
+    background: var(--text-color);
     width: 0;
     height: 1px;
     position: absolute;
     bottom: 1rem;
     margin: auto;
 
-    transition: width 0.3s ease-out;
+    transition: width 0.3s ease-out, background 0.3s ease-out;
   }
 
   &:hover::after {
@@ -64,4 +66,9 @@
   width: fit-content;
   font-size: 12px;
   opacity: 0.2;
+  transition: opacity 0.3s ease-out, color 0.3s ease-out;
+
+  &:hover {
+    opacity: 1;
+  }
 }
